--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
                     <i class="fas fa-birthday-cake"></i>
                 </div>
                 <h1>¡Estás invitado!</h1>
-                <p class="subtitle">Mi cumpleaños</p>
+                <p class="subtitle">Los 30 son los nuevos 20</p>
             </div>
 
             <div class="event-details">
