--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
             <div class="event-details">
                 <div class="detail-item">
                     <i class="fas fa-calendar-alt"></i>
-                    <span>Fecha: <strong>Domingo 5 de Octubre, 2024</strong></span>
+                    <span>Fecha: <strong>Domingo 5 de octubre 2025</strong></span>
                 </div>
                 <div class="detail-item">
                     <i class="fas fa-clock"></i>
