subo imágenes y últimos arreglos

--- a/index.html
+++ b/index.html
@@ -12,9 +12,8 @@
     <div class="container">
         <div class="card">
             <div class="header">
-                <div class="celebration-icon">
-                    <i class="fas fa-birthday-cake"></i>
-                </div>
+                <div class="header-bg" aria-hidden="true"></div>
+                <div class="header-bg-overlay" aria-hidden="true"></div>
                 <h1>¡Estás invitado!</h1>
                 <p class="subtitle">Los 30 son los nuevos 20</p>
             </div>
